# semantic-desktop-search

./: LICENSE  README.md  RELEASE_CHECKLIST.md  start.sh  stop-servers.sh
.github/workflows/: run-script.yml
app/: ingest.py  main.py  requirements.txt  search.py
docs/: RELEASE-CHECKLIST.md  python-venv-cheat-sheet.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.jsx  ToastProvider.jsx  api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
