[package]
name = "semantic_desktop_search"
version = "0.1.0"
authors = ["Miguel Manzano <mtecsystems@gmail.com>"]
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
