[package]
name = "semantic_desktop_search"
version = "0.1.0"
authors = ["Miguel Manzano <mtecsystems@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
